# Patient_Doctor_Med_Report

./: README.md  pyproject.toml
backend/: .env  main.py  pyproject.toml  requirements.txt
doctor-patient AI summerizer/: app.py
doctor-patient AI summerizer/templates/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
